--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -59,18 +59,24 @@
   background: white;
   margin-left: 10px;
 }
-button {
+.btn {
   position: absolute;
   right: 12px;
   top: 12px;
   border-radius: 50%;
   background-color: #252a2d;
-  height: 60px;
-  width: 60px;
+  height: 64px;
+  width: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+.btn:hover {
+  background-color: #485258;
+  height: 68px;
+  width: 68px;
+  transition: background-color 0.15s ease-out;
 }
 input {
   border: none;
