--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -23,6 +23,7 @@
   font-family: "Inter", sans-serif;
   color: #6f787f;
   line-height: 24px;
+  overflow: hidden;
 }
 .input-item {
   border: 0px;
@@ -34,8 +35,8 @@
   align-items: start;
   justify-content: center;
 }
-.input-item label {
-  font-size: 10px;
+.inputDate {
+  overflow: hidden !important;
 }
 .first-input {
 }
