--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -9,11 +9,14 @@
   height: 96px;
 }
 .title-text {
-  color: #555f66;
+  color: #363d42;
   text-align: left;
-  line-height: 16px;
+  line-height: 24px;
   font-family: "Inter", sans-serif;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
 }
 .locationdetails {
   font-family: "Inter", sans-serif;
@@ -165,13 +168,12 @@ input[type="date"i] {
   /* color: #0966d7; */
   background-color: white !important;
   color: black !important;
-  content: "Ratul";
   background: white !important;
 }
 .inputPlaceholder {
   background-color: white;
   position: absolute;
-  top: 36px;
+  top: 40px;
   width: 103px;
   padding: 5px 0px;
   pointer-events: none;
@@ -181,19 +183,7 @@ input[type="date"i] {
   font-size: 20px;
   font-weight: 400;
   text-align: left;
-}
-#next {
-  background-color: white;
-  position: absolute;
-  top: 36px;
-  width: 120px;
-  padding: 5px 0px;
-  pointer-events: none;
-  font-family: "Inter", sans-serif;
-  color: #6f787f;
-  line-height: 24px;
-  font-size: 20px;
-  font-weight: 400;
+  font-style: normal;
 }
 @media only screen and (max-width: 768px) {
   .search-component {
@@ -260,6 +250,9 @@ input[type="date"i] {
     color: #ffffff;
     display: flex;
     margin-top: 16px;
+  }
+  #location {
+    margin-top: 10px;
   }
   .inputPlaceholder {
     background-color: white;
