--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -66,10 +66,13 @@
 }
 
 .btn {
-  position: absolute;
+  position: relative;
   right: 16px;
   top: 16px;
-  border-radius: 50%;
+  border-radius: 100%;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
   background-color: #252a2d;
   height: 64px;
   width: 64px;
@@ -77,12 +80,17 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition: height 0.15s ease-out, width 0.15s ease-out,
+    background-color 0.15s ease-out;
+  box-shadow: inset 0 0 0 1px rgba(12, 34, 45, 0.09),
+    0 0 1px 0.5px rgba(0, 0, 0, 0.09), 0 2px 12px rgba(12, 34, 45, 0.09);
 }
 .btn:hover {
-  background-color: #485258;
-  height: 68px;
-  width: 68px;
-  transition: background-color 0.15s ease-out;
+  /* background-color: #485258; */
+  height: 4.25rem;
+  width: 4.25rem;
+  color: #f8f8f9;
+  /* transition: background-color 0.15s ease-out; */
 }
 /* input::placeholder {
   font-weight: bold;
@@ -192,6 +200,53 @@ input[type="date"i] {
   text-align: left;
   font-style: normal;
 }
+.search_icon-wrap {
+  width: 4rem;
+  height: 4rem;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  background-color: #252a2d;
+  border-radius: 100%;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  transition: height 0.15s ease-out, width 0.15s ease-out,
+    background-color 0.15s ease-out;
+  display: grid;
+  position: relative;
+  box-shadow: inset 0 0 0 1px rgba(12, 34, 45, 0.09),
+    0 0 1px 0.5px rgba(0, 0, 0, 0.09), 0 2px 12px rgba(12, 34, 45, 0.09);
+}
+
+.search_icon-wrap:hover {
+  width: 4.25rem;
+  height: 4.25rem;
+  color: #f8f8f9;
+  background-color: #485258;
+}
+
+.search_icon-wrap:active {
+  width: 3.75rem;
+  height: 3.75rem;
+  color: #e9ebec;
+  background-color: #363d42;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+.search_icon {
+  width: 4.25rem;
+  height: 4.25rem;
+  border-radius: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  display: flex;
+  top: 50px;
+}
+
 /* React Date calender edit  */
 .react-datepicker {
   font-family: Inter, sans-serif !important;
@@ -225,17 +280,24 @@ input[type="date"i] {
   .react-datepicker__triangle::before {
   border-top-color: rgba(12, 34, 45, 0.09) !important; /* Border/Main/Default */
 }
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
+.react-datepicker-popper[data-placement^="bottom"]
+  .react-datepicker__triangle::before {
+  /* border: none !important; */
+}
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
+.react-datepicker-popper[data-placement^="bottom"]
+  .react-datepicker__triangle::after {
+  border: none !important;
+  border-top-color: rgba(12, 34, 45, 0.09) !important;
+  border-radius: 0 !important;
+}
 .react-datepicker_year-read-view--down-arrow,
 .react-datepicker_month-read-view--down-arrow,
 .react-datepicker_month-year-read-view--down-arrow,
 .react-datepicker_navigation-icon::before {
-  border-color: rgba(
-    85,
-    95,
-    102,
-    1
-  ) !important; /* Content/Main/Default/Caption */
-  border-width: 2px 2px 0 0 !important;
+  border-color: rgb(82, 118, 144) !important; /* Content/Main/Default/Caption */
+  border-width: 1px 2px 0 0 !important;
   top: 12px !important;
   height: 8px !important;
   width: 8px !important;
@@ -279,6 +341,9 @@ input[type="date"i] {
   border-radius: 999em !important;
 }
 .react-datepicker__day--selected:hover {
+  border-radius: 999em !important;
+}
+.react-datepicker__day {
   border-radius: 999em !important;
 }
 .react-datepicker_day--disabled,
