--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -26,7 +26,7 @@
 .input-item {
   border: 0px;
   color: black;
-  padding-left: 32px;
+  padding-left: 40px;
   width: 268px;
   height: 96px;
   display: flex;
@@ -35,14 +35,29 @@
   align-items: start;
   justify-content: center;
 }
+.mobile_show {
+  display: none;
+}
+.input-item_2 {
+  border: 0px;
+  color: black;
+  padding-left: 32px;
+  width: 268px;
+  height: 96px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
 .last-button {
   width: 96px;
   display: flex;
-  align-items: flex-start;
+  padding-left: 16px;
   gap: 8px;
   height: 96px;
   flex-direction: column;
 }
+
 .title-text {
   color: #555f66;
   text-align: left;
@@ -92,25 +107,8 @@
   color: #f8f8f9;
   /* transition: background-color 0.15s ease-out; */
 }
-/* input::placeholder {
-  font-weight: bold;
-  opacity: 0.5;
-  color: red;
-} */
-.locationdetails {
-  font-family: "Inter", sans-serif;
-  color: #363d42;
-  line-height: 24px;
-}
-.inputDate {
-  font-family: "Inter", sans-serif;
-  color: #6f787f;
-  line-height: 24px;
-  overflow: hidden;
-}
-
-.inputDate {
-  overflow: hidden !important;
+.react-datepicker-wrapper {
+  width: 0% !important;
 }
 .first-input {
   border-right: 1px solid rgb(214, 214, 214);
@@ -123,30 +121,25 @@ input {
   height: 20px;
   font-size: 16px;
   width: auto;
-  /* background-color: #0966d7; */
   overflow: hidden;
 }
 textarea:focus,
 input:focus {
   outline: none;
 }
-.date {
+/* .date {
   color: black;
   margin-left: 343px;
   position: absolute;
-}
-.mobileFlex {
-  display: flex;
-}
-
-.input-container input {
+}*/
+/* .input-container input {
   border: none;
   box-sizing: border-box;
   outline: 0;
   padding: 0.75rem;
   position: relative;
   width: 100%;
-}
+} */
 
 input#datein[type="date"]::-webkit-calendar-picker-indicator {
   background: transparent;
@@ -154,11 +147,11 @@ input#datein[type="date"]::-webkit-calendar-picker-indicator {
   color: transparent;
   cursor: pointer;
   height: auto;
-  left: 30%;
+  left: 5%;
   position: absolute;
   right: 0;
   top: 10%;
-  width: 28%;
+  width: 44%;
 }
 input#dateOut[type="date"]::-webkit-calendar-picker-indicator {
   background: transparent;
@@ -166,11 +159,11 @@ input#dateOut[type="date"]::-webkit-calendar-picker-indicator {
   color: transparent;
   cursor: pointer;
   height: auto;
-  left: 62%;
+  left: 52%;
   position: absolute;
   right: 0;
   top: 10%;
-  width: 28%;
+  width: 44%;
 }
 input[type="date"]::-webkit-input-placeholder {
   color: white;
@@ -186,7 +179,7 @@ input[type="date"i] {
   background: white !important;
 }
 .inputPlaceholder {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   position: absolute;
   top: 40px;
   width: 103px;
@@ -195,7 +188,7 @@ input[type="date"i] {
   font-family: "Inter", sans-serif;
   color: #6f787f;
   line-height: 24px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
   text-align: left;
   font-style: normal;
@@ -279,11 +272,13 @@ input[type="date"i] {
 .react-datepicker-popper[data-placement^="top"]
   .react-datepicker__triangle::before {
   border-top-color: rgba(12, 34, 45, 0.09) !important; /* Border/Main/Default */
+  display: none !important;
 }
 .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
 .react-datepicker-popper[data-placement^="bottom"]
   .react-datepicker__triangle::before {
   /* border: none !important; */
+  display: none !important;
 }
 .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
 .react-datepicker-popper[data-placement^="bottom"]
@@ -357,9 +352,213 @@ input[type="date"i] {
     1
   ) !important; /* Content/Main/Default/Placeholder */
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1023px) {
+  .search-component {
+    width: 25rem;
+    max-height: 76px;
+  }
+  .placeholder-font {
+    color: #6f787f;
+    text-align: left;
+    line-height: 24px;
+    font-family: "Inter", sans-serif;
+    /* margin-bottom: 8px; */
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    width: 136px;
+  }
+  input {
+    border: none;
+    height: 24px;
+    font-size: 16px;
+    width: 100%;
+    overflow: hidden;
+  }
+  textarea:focus,
+  input:focus {
+    outline: none;
+  }
+
+  .last-button {
+    display: none;
+  }
+  .search-details {
+    position: relative;
+    display: flex;
+    width: 25rem;
+    max-height: 96px;
+    border-radius: 16px;
+    box-shadow: 0px 0.5px 1px rgba(12, 34, 45, 0.09),
+      0px 2px 12px rgba(12, 34, 45, 0.09),
+      inset 0px 0px 0px 1px rgba(12, 34, 45, 0.09);
+    background: white;
+    margin-bottom: 16px;
+  }
+  .mobile_show {
+    display: block;
+    border: 0px;
+  }
+  .mobile-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 16px;
+    width: 400px;
+    height: 48px;
+    border-radius: 999px;
+    background-color: #0966d7;
+  }
+  .search_button-wrapper {
+    width: 25rem;
+    justify-content: center;
+    display: flex;
+  }
+
+  .search_button-wrapper.show-tablet {
+    width: 100%;
+    max-width: 25rem;
+  }
+  .search_button-2 {
+    width: 100%;
+  }
+  .search_button-2 {
+    width: 25rem;
+    height: 3rem;
+    color: #fff;
+    background-color: #0966d7;
+    border-radius: 4rem;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    text-decoration: none;
+    display: flex;
+  }
+
+  .search_button-2:hover {
+    width: 25.25rem;
+    background-color: #1271f8;
+  }
+  .search_button-2:active {
+    width: 24.75rem;
+    background-color: #045bbe;
+  }
+  .button_link {
+    letter-spacing: 0.01em;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-family: Inter, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    text-decoration: none;
+  }
+
+  .button_link.black-bg {
+    color: #6696ff;
+  }
 }
-@media only screen and (max-width: 568px) {
-}
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 767px) {
+  .search-component {
+    width: 21.37rem;
+    max-height: 76px;
+  }
+  .placeholder-font {
+    color: #6f787f;
+    text-align: left;
+    line-height: 24px;
+    font-family: "Inter", sans-serif;
+    /* margin-bottom: 8px; */
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    width: 130px;
+  }
+  input {
+    border: none;
+    height: 24px;
+    font-size: 16px;
+    width: 100%;
+    overflow: hidden;
+  }
+  textarea:focus,
+  input:focus {
+    outline: none;
+  }
+
+  .last-button {
+    display: none;
+  }
+  .search-details {
+    position: relative;
+    display: flex;
+    width: 21.37rem;
+    max-height: 96px;
+    border-radius: 16px;
+    box-shadow: 0px 0.5px 1px rgba(12, 34, 45, 0.09),
+      0px 2px 12px rgba(12, 34, 45, 0.09),
+      inset 0px 0px 0px 1px rgba(12, 34, 45, 0.09);
+    background: white;
+    margin-bottom: 16px;
+  }
+  .mobile_show {
+    display: block;
+    border: 0px;
+  }
+  .mobile-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 16px;
+    width: 21.37rem;
+    height: 48px;
+    border-radius: 999px;
+    background-color: #0966d7;
+  }
+  .search_button-wrapper {
+    width: 21.37rem;
+    justify-content: center;
+    display: flex;
+  }
+
+  .search_button-wrapper.show-tablet {
+    width: 100%;
+    max-width: 21.37rem;
+  }
+  .search_button-2 {
+    width: 100%;
+  }
+  .search_button-2 {
+    width: 21.37rem;
+    height: 3rem;
+    color: #fff;
+    background-color: #0966d7;
+    border-radius: 4rem;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    text-decoration: none;
+    display: flex;
+  }
+
+  .search_button-2:hover {
+    width: 21.37rem;
+    background-color: #1271f8;
+  }
+  .search_button-2:active {
+    width: 21.87rem;
+    background-color: #045bbe;
+  }
+  .button_link {
+    letter-spacing: 0.01em;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    font-family: Inter, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    text-decoration: none;
+  }
+
+  .button_link.black-bg {
+    color: #6696ff;
+  }
 }
