bug Fixed of date

--- a/src/assets/styles/search.css
+++ b/src/assets/styles/search.css
@@ -182,7 +182,7 @@ input[type="date"i] {
   background-color: rgb(255, 255, 255);
   position: absolute;
   top: 40px;
-  width: 103px;
+  width: 137px;
   padding: 5px 0px;
   pointer-events: none;
   font-family: "Inter", sans-serif;
@@ -279,13 +279,30 @@ input[type="date"i] {
   .react-datepicker__triangle::before {
   /* border: none !important; */
   display: none !important;
+  background-color: transparent !important;
+  color: transparent !important;
+}
+.react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle,
+.react-datepicker-popper[data-placement^="top"]
+  .react-datepicker__triangle::before {
+  /* border: none !important; */
+  display: none !important;
+  background-color: transparent !important;
+  color: transparent !important;
 }
 .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
 .react-datepicker-popper[data-placement^="bottom"]
   .react-datepicker__triangle::after {
-  border: none !important;
-  border-top-color: rgba(12, 34, 45, 0.09) !important;
-  border-radius: 0 !important;
+  display: none !important;
+  background-color: transparent !important;
+  color: transparent !important;
+}
+.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle,
+.react-datepicker-popper[data-placement^="bottom"]
+  .react-datepicker__triangle::after {
+  display: none !important;
+  background-color: transparent !important;
+  color: transparent !important;
 }
 .react-datepicker_year-read-view--down-arrow,
 .react-datepicker_month-read-view--down-arrow,
@@ -352,7 +369,7 @@ input[type="date"i] {
     1
   ) !important; /* Content/Main/Default/Placeholder */
 }
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 991px) {
   .search-component {
     width: 25rem;
     max-height: 76px;
@@ -387,7 +404,7 @@ input[type="date"i] {
     position: relative;
     display: flex;
     width: 25rem;
-    max-height: 96px;
+    max-height: 76px;
     border-radius: 16px;
     box-shadow: 0px 0.5px 1px rgba(12, 34, 45, 0.09),
       0px 2px 12px rgba(12, 34, 45, 0.09),
@@ -410,19 +427,14 @@ input[type="date"i] {
     background-color: #0966d7;
   }
   .search_button-wrapper {
-    width: 25rem;
+    width: 25.25rem;
+    height: 3.25rem;
     justify-content: center;
+    align-items: center;
     display: flex;
   }
 
-  .search_button-wrapper.show-tablet {
-    width: 100%;
-    max-width: 25rem;
-  }
-  .search_button-2 {
-    width: 100%;
-  }
-  .search_button-2 {
+  .search_button {
     width: 25rem;
     height: 3rem;
     color: #fff;
@@ -435,14 +447,72 @@ input[type="date"i] {
     display: flex;
   }
 
-  .search_button-2:hover {
+  .search_button:hover {
     width: 25.25rem;
     background-color: #1271f8;
   }
-  .search_button-2:active {
+
+  .search_button:active {
     width: 24.75rem;
     background-color: #045bbe;
   }
+
+  .search_container {
+    grid-row-gap: 1rem;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .search_body {
+    width: 25rem;
+    height: 76px;
+    max-width: 25rem;
+    grid-row-gap: 1rem;
+    border-radius: 1rem;
+    flex-direction: column;
+    display: none;
+  }
+
+  .search_text-wrapper {
+    width: 168px;
+    grid-row-gap: 0.25rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+  }
+
+  .search_text-wrapper.tablet {
+    margin-right: 1rem;
+  }
+
+  .search_button-2 {
+    width: 25rem;
+    height: 3rem;
+    color: #fff;
+    background-color: #0966d7;
+    border-radius: 4rem;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    text-decoration: none;
+    transition: height 0.15s ease-out, width 0.15s ease-out,
+      background-color 0.15s ease-out;
+    display: flex;
+  }
+
+  .search_button-2:hover {
+    width: 25.25rem;
+    height: 3.25rem;
+    background-color: #1271f8;
+  }
+
+  .search_button-2:active {
+    width: 24.75rem;
+    height: 2.75rem;
+    background-color: #045bbe;
+  }
+
   .button_link {
     letter-spacing: 0.01em;
     padding-left: 0.5rem;
@@ -452,9 +522,51 @@ input[type="date"i] {
     line-height: 1.5rem;
     text-decoration: none;
   }
-
+  &.clicked {
+    .search_button-2 {
+      width: 24.75rem;
+      height: 2.75rem;
+      background-color: #045bbe;
+      transition: height 0.15s ease-out, width 0.15s ease-out,
+        background-color 0.15s ease-out;
+    }
+  }
+  .first-input {
+    border-right: 1px solid rgb(214, 214, 214) !important;
+  }
   .button_link.black-bg {
     color: #6696ff;
+  }
+  .nativeInputFont {
+    letter-spacing: 0.01em;
+    font-family: Inter, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    text-decoration: none;
+    font-weight: 400;
+  }
+  .input-item {
+    border: 0px;
+    color: black;
+    padding-left: 16px;
+    width: 268px;
+    height: 76px;
+    display: flex;
+    /* margin: 32px 24px; */
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+  }
+  .input-item_2 {
+    border: 0px;
+    color: black;
+    padding-left: 16px;
+    width: 268px;
+    height: 76px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -546,6 +658,7 @@ input[type="date"i] {
   }
   .search_button-2:active {
     width: 21.87rem;
+    height: 2.75rem;
     background-color: #045bbe;
   }
   .button_link {
@@ -560,5 +673,34 @@ input[type="date"i] {
 
   .button_link.black-bg {
     color: #6696ff;
+  }
+  .input-item {
+    border: 0px;
+    color: black;
+    padding-left: 16px;
+    width: 268px;
+    height: 96px;
+    display: flex;
+    /* margin: 32px 24px; */
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+  }
+  .input-item_2 {
+    border: 0px;
+    color: black;
+    padding-left: 16px;
+    width: 268px;
+    height: 96px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 479px) {
+  .search_button-wrapper.show-tablet {
+    width: 100%;
+    max-width: 21.375rem;
   }
 }
