--- a/LandingPage/src/assets/styles/search.css
+++ b/LandingPage/src/assets/styles/search.css
@@ -127,19 +127,6 @@ textarea:focus,
 input:focus {
   outline: none;
 }
-/* .date {
-  color: black;
-  margin-left: 343px;
-  position: absolute;
-}*/
-/* .input-container input {
-  border: none;
-  box-sizing: border-box;
-  outline: 0;
-  padding: 0.75rem;
-  position: relative;
-  width: 100%;
-} */
 
 input#datein[type="date"]::-webkit-calendar-picker-indicator {
   background: transparent;
@@ -193,41 +180,7 @@ input[type="date"i] {
   text-align: left;
   font-style: normal;
 }
-/* .search_icon-wrap {
-  width: 4rem;
-  height: 4rem;
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
-  background-color: #252a2d;
-  border-radius: 100%;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr;
-  grid-auto-columns: 1fr;
-  justify-content: center;
-  align-items: center;
-  justify-items: center;
-  transition: height 0.15s ease-out, width 0.15s ease-out,
-    background-color 0.15s ease-out;
-  display: grid;
-  position: relative;
-  box-shadow: inset 0 0 0 1px rgba(12, 34, 45, 0.09),
-    0 0 1px 0.5px rgba(0, 0, 0, 0.09), 0 2px 12px rgba(12, 34, 45, 0.09);
-}
 
-.search_icon-wrap:hover {
-  width: 4.25rem;
-  height: 4.25rem;
-  color: #f8f8f9;
-  background-color: #485258;
-}
-
-.search_icon-wrap:active {
-  width: 3.75rem;
-  height: 3.75rem;
-  color: #e9ebec;
-  background-color: #363d42;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-} */
 .search_icon {
   width: 4.25rem;
   height: 4.25rem;
@@ -569,7 +522,104 @@ input[type="date"i] {
 .search_content.big {
   width: auto;
 }
+.search-bar-dropdown,
+.search-bar-dropdown * {
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.search-bar-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 240px;
+  height: 264px;
+  position: relative;
+}
+.dropdown {
+  background: var(--background-main-default-default, #ffffff);
+  border-radius: 16px;
+  padding: 4px 4px 4px 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  box-shadow: var(
+    --elevation-1-dp-box-shadow,
+    0px 2px 12px 0px rgba(12, 34, 45, 0.09),
+    0px 0.5px 1px 0px rgba(12, 34, 45, 0.09),
+    inset 0px 0px 0px 1px rgba(12, 34, 45, 0.09)
+  );
+  overflow: hidden;
+}
+.frame {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+}
+.list-item {
+  padding: 12px 16px 12px 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: var(--content-main-default-text, #363d42);
+  text-align: left;
+  color: var(--content-main-default-caption, #555f66);
+  font: var(--text-t-200-desktop-regular, 400 14px/20px "Inter", sans-serif);
+}
+.list-item:hover {
+  background-color: #1271f8;
+  border-radius: 10px;
+  color: white;
+}
+.frame2 {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex: 1;
+  position: relative;
+}
+.label {
+  position: relative;
+  align-self: stretch;
+}
 
+.caption {
+  text-align: left;
+  font: var(--text-t-100-desktop-regular, 500 12px/16px "Inter", sans-serif);
+  position: relative;
+  align-self: stretch;
+}
+.icon {
+  opacity: 0.8500000238418579;
+  flex-shrink: 0;
+  position: relative;
+  overflow: visible;
+}
+.dropDown {
+  margin-top: 10px;
+}
+.inputText {
+  display: block;
+}
 @media only screen and (max-width: 991px) {
   .search-component {
     width: 25rem;
