--- a/LosAngelPage/src/assets/styles/search.css
+++ b/LosAngelPage/src/assets/styles/search.css
@@ -10,7 +10,7 @@
 }
 .search-component {
   max-width: 640px;
-  max-height: 96px;
+  /* max-height: 96px; */
 }
 .search-field {
 }
@@ -79,41 +79,11 @@
   font-style: normal;
   width: 204px;
 }
-
-.btn {
-  position: relative;
-  right: 16px;
-  top: 16px;
-  border-radius: 100%;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr;
-  grid-auto-columns: 1fr;
-  background-color: #252a2d;
-  height: 64px;
-  width: 64px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: height 0.15s ease-out, width 0.15s ease-out,
-    background-color 0.15s ease-out;
-  box-shadow: inset 0 0 0 1px rgba(12, 34, 45, 0.09),
-    0 0 1px 0.5px rgba(0, 0, 0, 0.09), 0 2px 12px rgba(12, 34, 45, 0.09);
-}
-.btn:hover {
-  /* background-color: #485258; */
-  height: 4.25rem;
-  width: 4.25rem;
-  color: #f8f8f9;
-  /* transition: background-color 0.15s ease-out; */
-}
 .react-datepicker-wrapper {
   width: 0% !important;
 }
 .first-input {
   border-right: 1px solid rgb(214, 214, 214);
-}
-.last-input {
 }
 
 input {
@@ -127,20 +97,6 @@ textarea:focus,
 input:focus {
   outline: none;
 }
-/* .date {
-  color: black;
-  margin-left: 343px;
-  position: absolute;
-}*/
-/* .input-container input {
-  border: none;
-  box-sizing: border-box;
-  outline: 0;
-  padding: 0.75rem;
-  position: relative;
-  width: 100%;
-} */
-
 input#datein[type="date"]::-webkit-calendar-picker-indicator {
   background: transparent;
   bottom: 0;
@@ -371,8 +327,8 @@ input[type="date"i] {
 }
 @media only screen and (max-width: 991px) {
   .search-component {
-    width: 25rem;
-    max-height: 76px;
+    max-width: 25rem;
+    /* max-height: 76px; */
   }
   .placeholder-font {
     color: #6f787f;
@@ -403,8 +359,8 @@ input[type="date"i] {
   .search-details {
     position: relative;
     display: flex;
-    width: 25rem;
-    max-height: 76px;
+    /* max-width: 25rem;
+    max-height: 76px; */
     border-radius: 16px;
     box-shadow: 0px 0.5px 1px rgba(12, 34, 45, 0.09),
       0px 2px 12px rgba(12, 34, 45, 0.09),
@@ -435,7 +391,7 @@ input[type="date"i] {
   }
 
   .search_button {
-    width: 25rem;
+    /* max-width: 25rem; */
     height: 3rem;
     color: #fff;
     background-color: #0966d7;
@@ -457,37 +413,8 @@ input[type="date"i] {
     background-color: #045bbe;
   }
 
-  .search_container {
-    grid-row-gap: 1rem;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .search_body {
-    width: 25rem;
-    height: 76px;
-    max-width: 25rem;
-    grid-row-gap: 1rem;
-    border-radius: 1rem;
-    flex-direction: column;
-    display: none;
-  }
-
-  .search_text-wrapper {
-    width: 168px;
-    grid-row-gap: 0.25rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-    font-size: 1rem;
-  }
-
-  .search_text-wrapper.tablet {
-    margin-right: 1rem;
-  }
-
   .search_button-2 {
-    width: 25rem;
+    width: 100%;
     height: 3rem;
     color: #fff;
     background-color: #0966d7;
@@ -571,8 +498,8 @@ input[type="date"i] {
 }
 @media only screen and (max-width: 767px) {
   .search-component {
-    width: 21.37rem;
-    max-height: 76px;
+    max-width: 25rem;
+    /* max-height: 76px; */
   }
   .placeholder-font {
     color: #6f787f;
@@ -580,7 +507,7 @@ input[type="date"i] {
     line-height: 24px;
     font-family: "Inter", sans-serif;
     /* margin-bottom: 8px; */
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     font-style: normal;
     width: 130px;
@@ -603,8 +530,8 @@ input[type="date"i] {
   .search-details {
     position: relative;
     display: flex;
-    width: 21.37rem;
-    max-height: 96px;
+    /* width: 25rem; */
+    /* max-height: 96px; */
     border-radius: 16px;
     box-shadow: 0px 0.5px 1px rgba(12, 34, 45, 0.09),
       0px 2px 12px rgba(12, 34, 45, 0.09),
@@ -616,31 +543,22 @@ input[type="date"i] {
     display: block;
     border: 0px;
   }
-  .mobile-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px 16px;
-    width: 21.37rem;
-    height: 48px;
-    border-radius: 999px;
-    background-color: #0966d7;
-  }
+
   .search_button-wrapper {
-    width: 21.37rem;
+    /* max-width: 25rem; */
     justify-content: center;
     display: flex;
   }
 
   .search_button-wrapper.show-tablet {
     width: 100%;
-    max-width: 21.37rem;
+    /* max-width: 25rem; */
   }
   .search_button-2 {
     width: 100%;
   }
   .search_button-2 {
-    width: 21.37rem;
+    /* width: 21.37rem; */
     height: 3rem;
     color: #fff;
     background-color: #0966d7;
@@ -701,6 +619,6 @@ input[type="date"i] {
 @media only screen and (max-width: 479px) {
   .search_button-wrapper.show-tablet {
     width: 100%;
-    max-width: 21.375rem;
+    max-width: 25rem;
   }
 }
