--- a/LosAngelPage/src/assets/styles/search.css
+++ b/LosAngelPage/src/assets/styles/search.css
@@ -8,6 +8,11 @@
   background-color: black;
   height: 150px;
 }
+.middle-input {
+  border-style: solid;
+  border-color: var(--border-main-default, rgba(12, 34, 45, 0.09));
+  border-width: 0px 0px 0px 0px !important;
+}
 /* .search-bar,
 .search-bar * {
   box-sizing: border-box;
@@ -32,7 +37,7 @@
   border-radius: 50px;
   background: white;
   border-radius: 999px;
-  padding: 0px 0px 0px 8px;
+  /* padding: 0px 0px 0px 8px; */
 }
 .input-item {
   border-style: solid;
@@ -96,11 +101,12 @@
   width: 0% !important;
 }
 .first-input {
-  border-right: 1px solid rgb(214, 214, 214);
+  /* border-right: 1px solid rgb(214, 214, 214); */
 }
 
 input {
   border: none;
+  height: 100%;
   /* height: 20px; */
   /* font-size: 16px; */
   /* width: auto; */
@@ -210,9 +216,8 @@ input[type="date"i] {
   );
   top: 36px;
   padding-bottom: 5px;
-
   position: absolute;
-  width: 96px;
+  width: 102px;
   pointer-events: none;
   align-self: stretch;
 }
@@ -495,7 +500,7 @@ input[type="date"i] {
     }
   }
   .first-input {
-    border-right: 1px solid rgb(214, 214, 214) !important;
+    /* border-right: 1px solid rgb(214, 214, 214) !important; */
   }
   .button_link.black-bg {
     color: #6696ff;
@@ -576,6 +581,11 @@ input[type="date"i] {
   }
   .inputPlaceholder {
     top: 36px;
+  }
+}
+@media only screen and (max-width: 390px) {
+  .search_button-wrapper {
+    max-width: 310px;
   }
 }
 
